# authorship_id

./: .gitignore  README.md  pyproject.toml  requirements-torch-cpu.txt  requirements-torch-cuda.txt
authorship_id/: __init__.py  authorship_id.ipynb
authorship_id/dataset/test/: 12Ctest04.txt
src/authorship_id/: __init__.py  enron_dataset_results.ipynb  pan_dataset_results.ipynb  preprocess_enron.ipynb  utils.py
