[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "authorship_id"
version = "0.1.0"
requires-python = ">=3.10,<=3.13"
description = "Performs single-domain, closed set authorship identification"

dependencies = [
    "jupyter",
    "numpy",
    "pandas",
    "seaborn",
    "scikit-learn",
    "torch==2.6.0",
    "tqdm",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "basedpyright",
    "jupyterlab-lsp",
    "microsoft-python-type-stubs @ git+https://github.com/microsoft/python-type-stubs.git",
    "pandas-stubs",
    "ruff",
]

[tool.uv.sources]
torch = [{ index = "torch-cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W"]

[tool.basedpyright]
include = ["."]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
